--- a/css/demo-page.css
+++ b/css/demo-page.css
@@ -114,13 +114,14 @@ p,
 }
 
 [class^="hvr-"] {
-  margin: .4em;
+  _margin: .4em;
   padding: 1em;
   cursor: pointer;
   _background: #e1e1e1;
   _border:1px solid #000000;
   text-decoration: none;
   color: #000000;
+  font-weight:500;
   /* Prevent highlight colour when element is tapped */
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 
