--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,14 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 #warp .top_select .container .ts_right li::before{padding-right:9px ;content:"┃"; color: #fff;}
 #warp .top_select .container .ts_right li:first-child::before{content: "";}
 #warp .top_select .container .ts_right a{color:#9c9c9c;} 
+.index_bottom_txt1{color:#ffffff; font-weight:600; font-size:16px; }
+.index_bottom_txt2{color:#ffffff; font-weight:500; font-size:16px; padding-right:10px}
+.index_bottom_txt3{color:#ffffff; font-weight:400; font-size:16px;}
+.visual_bottom{position:absolute; overflow: hidden; width:1200px; height:65px; padding:0 16px 0 16px; bottom:-23px; margin:0 auto 0 auto; background:#222222; color:#fff; z-index: 12;}
+.visual_bottom1{position:relative; display:inline-block; vertical-align: top; margin-top:17px; margin-right:19px; color:#ffffff; font-size:14px; padding :7px 12px; border:1px solid #ffffff}
+.visual_bottom2{position:relative; display:inline-block; width:400px; height:65px;  }
 
+.per_up{color:#ff1725; font-weight:600; padding-right:10px}
 /* 셀렉트 박스 */
 .where {display: block;_margin: 25px 15px;font-size: 11px;color: #9c9c9c;text-decoration: none;font-family: verdana;font-style: italic;}
 .selectbox {position: relative;width: 60px;_border: 1px solid #999;z-index: 1;float:right;}
@@ -93,7 +100,7 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 /* 비주얼 */
 #warp .visual{position:relative;  min-width:1850px;  max-width: 2000px; margin:0 auto;   height:810px; }
 #warp .visual .visual_img1{position:absolute; width: 100%; height:100%; background: url("../images/index_slide1.png") no-repeat center 0; background-size: 100%; max-width:2000px; height:810px;}
-#warp .visual .container{width: 1200px;; position: relative;}                   
+#warp .visual .container{width: 1200px;; height:810px; position: relative;}                   
 #warp .visual .text_box{position: relative; z-index:10; color:#fff;}
 #warp .visual .visual_txt1{font-size:34px; color:#fff; padding-top:240px;}
 #warp .visual .visual_txt2{font-size:65px; line-height: 75px; font-weight: 600; color:#fff; padding-top:20px;}
@@ -190,14 +197,18 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .swiper-pos{float:right; z-index: 99; margin-right:5px;}
 .swiper-pagination-current{font-weight:600;}
 
+.index_bottom-container{}
+.index_bottom-container .swiper-container{}
+.index_bottom-container .swiper-container .swiper-slide{background:transparent}
+
 
 /*유튜브 */
 .youtube_main{position: relative; height:665px;}
 .youtube_main .container{width: 100%; max-width: 2000px;}
 .youtube_contaiter{position: relative; width:1600px; height:665px; float:right; text-align:right;;}
 .youtube_info{position: relative; width:400px; display: inline-block; text-align:left;}
-.index_video{position: relative; overflow: hidden; padding-top:120px; display: inline-block; vertical-align: top; width: 1195px;}
-.youtube_info_txt1{font-size: 24px; color:#000000; font-weight: 400; padding-top:150px;}
+.index_video{position: relative; overflow: hidden; padding-top:90px; display: inline-block; vertical-align: top; width: 1195px;}
+.youtube_info_txt1{font-size: 24px; color:#000000; font-weight: 400; padding-top:120px;}
 .youtube_info_txt2{font-size: 50px; color:#000000; font-weight: 600; padding-top:25px;}
 .youtube_info_txt3{font-size: 16px; color:#444444; font-weight: 400; padding-top:35px;}
 .youtube_info_btn{padding-top:25px}
