--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 #top_gnb a{text-decoration:none}
 
 #top_gnb {position:relative;max-width: 2000px;  min-width:1850px;  height:80px; margin:0 auto; background:#222222;}
-#top_gnb .DB_wrap{position:relative;width:1850px;margin:0 auto;/*비표준=>left:50%;margin-left:-500px*/;height:80px}
+#top_gnb .DB_wrap{position:relative;width:1850px; overflow:hidden; margin:0 auto;/*비표준=>left:50%;margin-left:-500px*/;height:80px}
 #top_gnb .DB_wrap h1{margin:10px 25px 0 0;float:left; color:#fff; font-size:0px}
 #top_gnb .DB_wrap h1 a{color:#fff;}
 #top_gnb .DB_wrap .DB_main{float:left;_padding-top:29px}
@@ -56,12 +56,6 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 #warp .top_select .container .ts_right li::before{padding-right:9px ;content:"┃"; color: #fff;}
 #warp .top_select .container .ts_right li:first-child::before{content: "";}
 #warp .top_select .container .ts_right a{color:#9c9c9c;} 
-.index_bottom_txt1{color:#ffffff; font-weight:600; font-size:16px; }
-.index_bottom_txt2{color:#ffffff; font-weight:500; font-size:16px; padding-right:10px}
-.index_bottom_txt3{color:#ffffff; font-weight:400; font-size:16px;}
-.visual_bottom{position:absolute; overflow: hidden; width:1200px; height:65px; padding:0 16px 0 16px; bottom:-23px; margin:0 auto 0 auto; background:#222222; color:#fff; z-index: 12;}
-.visual_bottom1{position:relative; display:inline-block; vertical-align: top; margin-top:17px; margin-right:19px; color:#ffffff; font-size:14px; padding :7px 12px; border:1px solid #ffffff}
-.visual_bottom2{position:relative; display:inline-block; width:400px; height:65px;  }
 
 .per_up{color:#ff1725; font-weight:600; padding-right:10px}
 /* 셀렉트 박스 */
@@ -138,10 +132,8 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .switch_menu a.selected{color: #fff; background: linear-gradient(-45deg, #500b28, #e21c34); box-shadow: .15em .15em .8em rgba(0,0,0,.4);}
 .sub_raking{padding-top:47px;}
 
-
 #warp .photo_list{position:relative;   min-width:1850px;  height:565px;  }
 #warp .photo_list .container{overflow: hidden;}
-
 #warp .index_form{position:relative;  max-width: 2000px; margin:0 auto;   min-width:1850px;  height:530px; background:url("../images/index_form_bg.png") center 0;}
 #warp .index_form .container{position: relative; width:1250px;}
 
@@ -157,6 +149,9 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .icon3{background:url("../images/i_targeted.png") no-repeat;}
 .icon4{background:url("../images/i_trophy.png") no-repeat;}
 
+
+#warp .analy_list{position:relative;    height:700px;  }
+#warp .analy_list .container{ width:100%; max-width:2000px; overflow: hidden; }
 .analy_txt1{font-size: 60px; color:#000000; font-weight: 600; padding-top:60px;}
 .analy_txt2{font-size: 16px; color:#000000; font-weight: 400; padding-top:40px;}
 .analy_txt3{font-size: 28px; color:#000000; font-weight: 600; padding-top:0px;}
@@ -176,8 +171,6 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .analy_info_ul{position: absolute; bottom:45px; _padding-top:70px}
 .analy_info_ul li{display:inline-block; font-size:14px; font-weight: 500;; border:1px solid #000;     border-radius: 25px; padding:10px 16px; margin-right:5px;}
 
-#warp .analy_list{position:relative;    height:700px;  }
-#warp .analy_list .container{ width:100%; max-width:2000px; overflow: hidden; }
 .ana_slidebox{width:1600px;}
 .ana_photo{width: 1000px; height: 700px; position: absolute; }
 .ana_info{position: relative; text-align: right;}
@@ -191,20 +184,99 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .analy_box_size{width:1700px; height: 700px; overflow: hidden;}
 .swiper-nav{float:right; padding-top:30px; }
 .swiper_number{font-size:16px; color:#000000; width:auto !important; line-height: 16px; padding:0 5px;}
-.w840{width: 840px; float:right}
+.w840{width: 840px; margin-right:50px; float:right}
 .w1600{width:1600px;}
 .w1700{width:1600px; margin-right: 100px;}
 .swiper-pos{float:right; z-index: 99; margin-right:5px;}
 .swiper-pagination-current{font-weight:600;}
 
-.index_bottom-container{}
-.index_bottom-container .swiper-container{}
-.index_bottom-container .swiper-container .swiper-slide{background:transparent}
+.visual-tab .container{width: 100%; max-width: 2000px;}
+.visual_bottom{position:absolute; overflow: hidden; width:1200px; height:65px; padding:0 16px 0 16px; top:-33px; margin:0 auto 0 auto; background:#222222; color:#fff; z-index: 12;}
+.visual_bottom1{position:relative; display:inline-block; vertical-align: top; margin-top:17px; margin-right:19px; color:#ffffff; font-size:14px; padding :7px 12px; border:1px solid #ffffff}
+.visual_bottom2{position:relative; height: 64px; display:inline-block; width:auto; vertical-align: top;  overflow: hidden;  }
+.visual_bottom3{position:absolute; right:30px; height: 64px; top:20px; display:inline-block;}
+.index_bottom_txt1{color:#ffffff; font-weight:600; font-size:16px; }
+.index_bottom_txt2{color:#ffffff; font-weight:500; font-size:16px; padding-right:10px}
+.index_bottom_txt3{color:#ffffff; font-weight:400; font-size:16px;}
+.icnon_btn{cursor: pointer;}
+
+.indexvisual_nav{position: absolute; z-index: 10; top:0;}
+
+.visual_left_btn{
+  position: absolute;
+  top:0;
+  z-index:9;
+
+}
+.visual_right_btn{
+  position: absolute;
+  top:0;
+  z-index:9;
+
+}
+.indexvisual-container {
+  width: 100%;
+  height: 100%;
+}
+
+.indexvisual-container .swiper-slide {
+  text-align: left;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.index_bottom-container {
+  width: 100%;
+  height: 64px;
+}
+
+
+.index_bottom-container .swiper-slide {
+  height: 640px;
+  line-height: 0px;
+}
+
+
+.index_bottom-container .swiper-slide{background:transparent !important;
+  text-align: left;
+  font-size: 18px;
+  background: #f000; 
+  color:#fff;
+  vertical-align: top;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
 
 
 /*유튜브 */
 .youtube_main{position: relative; height:665px;}
 .youtube_main .container{width: 100%; max-width: 2000px;}
+.youtube_main .container1{width: 1200px; margin:0 auto; max-width: 2000px;}
 .youtube_contaiter{position: relative; width:1600px; height:665px; float:right; text-align:right;;}
 .youtube_info{position: relative; width:400px; display: inline-block; text-align:left;}
 .index_video{position: relative; overflow: hidden; padding-top:90px; display: inline-block; vertical-align: top; width: 1195px;}
