--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 
 
 /* 비주얼 */
-#warp .visual{position:relative;  min-width:1850px;  max-width: 2000px; margin:0 auto;   height:810px; }
+#warp .visual{position:relative;  min-width:1850px;  max-width: 2000px; margin:0 auto; overflow: hidden;  height:810px; }
 #warp .visual .visual_img1{position:absolute; width: 100%; height:100%; background: url("../images/index_slide1.png") no-repeat center 0; background-size: 100%; max-width:2000px; height:810px;}
 #warp .visual .container{width: 1200px;; height:810px; position: relative;}                   
 #warp .visual .text_box{position: relative; z-index:10; color:#fff;}
@@ -151,7 +151,7 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 
 
 #warp .analy_list{position:relative;    height:700px;  }
-#warp .analy_list .container{ width:100%; max-width:2000px; overflow: hidden; }
+#warp .analy_list .container{ _width:100%; max-width:2000px; overflow: hidden; }
 .analy_txt1{font-size: 60px; color:#000000; font-weight: 600; padding-top:60px;}
 .analy_txt2{font-size: 16px; color:#000000; font-weight: 400; padding-top:40px;}
 .analy_txt3{font-size: 28px; color:#000000; font-weight: 600; padding-top:0px;}
@@ -191,7 +191,7 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .swiper-pagination-current{font-weight:600;}
 
 .visual-tab .container{width: 100%; max-width: 2000px;}
-.visual_bottom{position:absolute; overflow: hidden; width:1200px; height:65px; padding:0 16px 0 16px; top:-33px; margin:0 auto 0 auto; background:#222222; color:#fff; z-index: 12;}
+.visual_bottom{position:absolute; overflow: hidden; width:1200px; height:65px; padding:0 16px 0 16px; top:-33px; left:50%; margin:0 0 0 -600px; background:#222222; color:#fff; z-index: 12;}
 .visual_bottom1{position:relative; display:inline-block; vertical-align: top; margin-top:17px; margin-right:19px; color:#ffffff; font-size:14px; padding :7px 12px; border:1px solid #ffffff}
 .visual_bottom2{position:relative; height: 64px; display:inline-block; width:auto; vertical-align: top;  overflow: hidden;  }
 .visual_bottom3{position:absolute; right:30px; height: 64px; top:20px; display:inline-block;}
@@ -204,13 +204,17 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 
 .visual_left_btn{
   position: absolute;
-  top:0;
+  top:400px;
+  left:50%;
+  margin-left:-680px;
   z-index:9;
 
 }
 .visual_right_btn{
   position: absolute;
-  top:0;
+  top:400px;
+  left:50%;
+  margin-left:680px;
   z-index:9;
 
 }
@@ -275,7 +279,7 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 
 /*유튜브 */
 .youtube_main{position: relative; height:665px;}
-.youtube_main .container{width: 100%; max-width: 2000px;}
+.youtube_main .container{_width: 100%; max-width: 2000px;}
 .youtube_main .container1{width: 1200px; margin:0 auto; max-width: 2000px;}
 .youtube_contaiter{position: relative; width:1600px; height:665px; float:right; text-align:right;;}
 .youtube_info{position: relative; width:400px; display: inline-block; text-align:left;}
