--- a/css/swiper-bundle.css
+++ b/css/swiper-bundle.css
@@ -158,6 +158,65 @@
   justify-content: center;
   color: var(--swiper-navigation-color, var(--swiper-theme-color));
 }
+.swiper-button-prev1,
+.swiper-button-next1 {
+  position: absolute;
+  top: 50%;
+  width: calc(var(--swiper-navigation-size) / 44 * 27);
+  height: var(--swiper-navigation-size);
+  margin-top: calc(-1 * var(--swiper-navigation-size) / 2);
+  z-index: 10;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--swiper-navigation-color, var(--swiper-theme-color));
+}
+
+.swiper-button-prev1.swiper-button-disabled,
+.swiper-button-next1.swiper-button-disabled {
+  opacity: 0.35;
+  cursor: auto;
+  pointer-events: none;
+}
+.swiper-button-prev1:after,
+.swiper-button-next1:after {
+  font-family: swiper-icons;
+  font-size: var(--swiper-navigation-size);
+  text-transform: none !important;
+  letter-spacing: 0;
+  text-transform: none;
+  font-variant: initial;
+  line-height: 1;
+}
+.swiper-button-prev1,
+.swiper-container-rtl .swiper-button-next1 {
+  left: 10px;
+  right: auto;
+}
+.swiper-button-prev1:after,
+.swiper-container-rtl .swiper-button-next1:after {
+  content: 'prev';
+}
+.swiper-button-next1,
+.swiper-container-rtl .swiper-button-prev1 {
+  right: 10px;
+  left: auto;
+}
+.swiper-button-next1:after,
+.swiper-container-rtl .swiper-button-prev1:after {
+  content: 'next';
+}
+.swiper-button-prev1.swiper-button-white,
+.swiper-button-next1.swiper-button-white {
+  --swiper-navigation-color: #ffffff;
+}
+.swiper-button-prev1.swiper-button-black,
+.swiper-button-next1.swiper-button-black {
+  --swiper-navigation-color: #000000;
+}
+
+
 .swiper-button-prev.swiper-button-disabled,
 .swiper-button-next.swiper-button-disabled {
   opacity: 0.35;
