20210207 비주얼 슬라이더 변경

--- a/css/main.css
+++ b/css/main.css
@@ -156,35 +156,15 @@ ul.tabs1 li a{color: #000000; cursor: pointer; border-radius: 25px; padding:7px 
 
 
 #page1_tab{text-align: center; padding-top:15px;}
-ul.tabs li {
-  display:inline-block;
+ul.tabs li {display:inline-block;}
+ul.tabs li a {color: #000000; cursor: pointer; border-radius: 25px; padding:7px 20px;}
+ul.tabs li.active a {color: #fff;}
+ul.tabs li a:hover {color: #fff; background: linear-gradient(-45deg, #500b28, #e21c34); box-shadow: .15em .15em .8em rgba(0,0,0,.4);}
+html ul.tabs li.active, html ul.tabs li.active a:hover  {color: #fff; cursor: pointer; border-radius: 25px;  background: linear-gradient(-45deg, #500b28, #e21c34); box-shadow: .15em .15em .8em rgba(0,0,0,.4);}
+.tab_container {text-align:center;}
+.tab_content { padding: 0;}
 
-}
-ul.tabs li a {
-  color: #000000; cursor: pointer; border-radius: 25px; padding:7px 20px;
-}
-ul.tabs li.active a {
-  color: #fff;
-}
-ul.tabs li a:hover {
-  color: #fff;
-  background: linear-gradient(-45deg, #500b28, #e21c34); box-shadow: .15em .15em .8em rgba(0,0,0,.4);
-}
-html ul.tabs li.active, html ul.tabs li.active a:hover  {
-  color: #fff; cursor: pointer; border-radius: 25px;
-  background: linear-gradient(-45deg, #500b28, #e21c34); box-shadow: .15em .15em .8em rgba(0,0,0,.4);
-}
-
-/*Tab Conent CSS*/
-.tab_container {
-  text-align:center;
-}
-.tab_content {
-  padding: 0;
-}
-
-
-#warp .analy_list{position:relative;    height:700px;  }
+#warp .analy_list{position:relative; height:700px;  }
 #warp .analy_list .container{ _width:100%; max-width:2000px; overflow: hidden; }
 .analy_txt1{font-size: 60px; color:#000000; font-weight: 600; padding-top:60px;}
 .analy_txt2{font-size: 16px; color:#000000; font-weight: 400; padding-top:40px;}
@@ -198,7 +178,7 @@ html ul.tabs li.active, html ul.tabs li.active a:hover  {
 .arr_left span::after {content: '';    width: 12px; /* 사이즈 */    height: 12px; /* 사이즈 */    border-top: 1px solid #121212; /* 선 두께 */    border-right: 1px solid #121212; /* 선 두께 */    display: inline-block;    transform: rotate(225deg); /* 각도 */    cursor: pointer;}
 .swiper_number{display: inline-block;}
 .swiper-analy {position: relative;;}
-.swiper-slide {    text-align: center;    font-size: 18px;    background: #fff;    /* Center slide text vertically */display: -webkit-box;    display: -ms-flexbox;    display: -webkit-flex; display: flex;    -webkit-box-pack: center;    -ms-flex-pack: center;    -webkit-justify-content: center;    justify-content: center;    -webkit-box-align: center;    -ms-flex-align: center;    -webkit-align-items: center;    align-items: center;  }
+.swiper-slide {text-align: center;  font-size: 18px; background: #fff;    /* Center slide text vertically */display: -webkit-box;    display: -ms-flexbox;    display: -webkit-flex; display: flex;    -webkit-box-pack: center;    -ms-flex-pack: center;    -webkit-justify-content: center;    justify-content: center;    -webkit-box-align: center;    -ms-flex-align: center;    -webkit-align-items: center;    align-items: center;  }
 
 .ana_info1{text-align:left; position: absolute;; margin:295px 0 0 766px;   background:#fff; box-shadow: 10px 10px 10px #f3f3f3; width: 420px; height: 335px; padding:40px 0 0 35px}
 .ana_history{text-align:left;background: linear-gradient(-45deg, #500b28, #e21c34); width: 418px; height: 273px; font-size:16px; line-height: 30px;; color:#fff; padding:45px;}
@@ -236,80 +216,37 @@ html ul.tabs li.active, html ul.tabs li.active a:hover  {
 
 .indexvisual_nav{position: absolute; z-index: 10; top:0;}
 
-.visual_left_btn{
-  position: absolute;
-  top:400px;
-  left:50%;
-  margin-left:-680px;
-  z-index:9;
+.visual_left_btn{position: absolute; top:400px; left:50%; margin-left:-680px; z-index:9;}
+.visual_right_btn{position: absolute;top:400px; left:50%; margin-left:680px; z-index:9;}
+.indexvisual-container{width: 100%; height: 100%;}
+.indexvisual-container .swiper-slide{ text-align: left; background: #fff;  display: -webkit-box; display: -ms-flexbox;  display: -webkit-flex;  display: flex;  -webkit-box-pack: center;  -ms-flex-pack: center;  -webkit-justify-content: center;  justify-content: center;  -webkit-box-align: center;  -ms-flex-align: center;  -webkit-align-items: center;  align-items: center;}
+.index_bottom-container{width: 100%;  height: 64px;}
+.index_bottom-container .swiper-slide {height: 640px;  line-height: 0px;}
+.index_bottom-container .swiper-slide{background:transparent !important;  text-align: left;  font-size: 18px;  background: #f000;   color:#fff;  vertical-align: top;  display: -webkit-box; display: -ms-flexbox;  display: -webkit-flex;  display: flex;  -webkit-box-pack: center; -ms-flex-pack: center;  -webkit-justify-content: center;  justify-content: center;  -webkit-box-align: center;  -ms-flex-align: center;  -webkit-align-items: center;  align-items: center;}
 
-}
-.visual_right_btn{
-  position: absolute;
-  top:400px;
-  left:50%;
-  margin-left:680px;
-  z-index:9;
+#ab_navi{	position: absolute;	width: 140px;	right: 0;	top: 145px;  z-index: 99;}
+#ab_navi .p_right_banner li{font-size:0;}
 
-}
-.indexvisual-container {
-  width: 100%;
-  height: 100%;
-}
+#d_tab37{position:relative;height:810px; max-width:2000px; margin:0 auto; overflow:hidden}
+#d_tab37 .d_img{height:100%}
+#d_tab37 .d_img li{position:absolute;left:100%;top:0;width:100%;height:100%;overflow:hidden}
+#d_tab37 .d_img li:first-child{left:0}
+#d_tab37 .d_img li .d_bg{position:absolute;left:50%;width:2000px/*가로필수*/;margin-left:-1000px/*가로절반*/;height:100%;}
+#d_tab37 .d_img li .d_bg img{width:100%}
+#d_tab37 .d_img li .d_bg1{position: absolute; z-index:9; top:0; left:50%; width:836px; height:856px;}
+#d_tab37 .d_img li .d_text{position:absolute;width:1200px;left:50%;margin-left:-600px;top:0px}
+#d_tab37 .d_img li .d_text .d_move{position:absolute;top:0px;display:none}
+#d_tab37 .d_img li .d_text .d_move.c1{top:160px;font-size: 34px; color:#fff; font-weight: 500; _padding-top:160px;}
+#d_tab37 .d_img li .d_text .d_move.c2{top:210px; font-size: 65px; color:#fff; font-weight: 600; line-height:78px; }
+#d_tab37 .d_img li .d_text .d_move.c3{top:395px; font-size: 18px; color:#fff; font-weight: 600; line-height:26px; }
+#d_tab37 .d_img li .d_text .d_move.c4{top:530px; }
 
-.indexvisual-container .swiper-slide {
-  text-align: left;
-  background: #fff;
-
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-
-.index_bottom-container {
-  width: 100%;
-  height: 64px;
-}
-
-
-.index_bottom-container .swiper-slide {
-  height: 640px;
-  line-height: 0px;
-}
-
-
-.index_bottom-container .swiper-slide{background:transparent !important;
-  text-align: left;
-  font-size: 18px;
-  background: #f000; 
-  color:#fff;
-  vertical-align: top;
-
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-
+#d_tab37 .d_arrow{position:absolute;width:1200px;left:50%;margin-left:-600px;top:50%;margin-top:-50px}
+#d_tab37 .d_arrow .d_prev{position:absolute;left:-100px;cursor:pointer;; z-index:99;}
+#d_tab37 .d_arrow .d_next{position:absolute;right:-100px;cursor:pointer; z-index:99;}
+#d_tab37 .d_btn{position:absolute;width:100%;bottom:20px;text-align:center}
+#d_tab37 .d_btn li{display:inline-block;*display:inline;zoom:1;width:14px;height:14px;background:url('images/main_btn_off.png') no-repeat;margin:0 3px;cursor:pointer}
+#d_tab37 .d_btn li.on{background:url('images/main_btn_on.png') no-repeat}
 
 /*유튜브 */
 .youtube_main{position: relative; height:665px;}
@@ -324,39 +261,11 @@ html ul.tabs li.active, html ul.tabs li.active a:hover  {
 .youtube_info_btn{padding-top:25px}
 .youtube-nav{padding-top:58px}
 .youtube_number{display: inline-block; width:auto !important}
+.youtube-container {width: 100%; height: 100%;}
+.youtube-container .swiper-slide {text-align: center;    font-size: 18px;    background: #f000;    width: 779px;    height: 445px;    display: -webkit-box;    display: -ms-flexbox;    display: -webkit-flex;    display: flex;    -webkit-box-pack: center;    -ms-flex-pack: center;    -webkit-justify-content: center;    justify-content: center;    -webkit-box-align: center;    -ms-flex-align: center;    -webkit-align-items: center;    align-items: center;  }
 .you_left, .you_right {position: relative;display: inline-block;}
-
-.you_right span::after {content: '';    width: 12px; /* 사이즈 */    height: 12px; /* 사이즈 */    border-top: 1px solid #121212; /* 선 두께 */    border-right: 1px solid #121212; /* 선 두께 */    display: inline-block;    transform: rotate(45deg); /* 각도 */    cursor: pointer;}
-.you_left span::after {content: '';    width: 12px; /* 사이즈 */    height: 12px; /* 사이즈 */    border-top: 1px solid #121212; /* 선 두께 */    border-right: 1px solid #121212; /* 선 두께 */    display: inline-block;    transform: rotate(225deg); /* 각도 */    cursor: pointer;}
-.youtube-container {
-    width: 100%;
-    height: 100%;
-  }
-
-  .youtube-container .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #f000;
-    width: 779px;
-    height: 445px;
-
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-  }
-
-
-
+.you_right span::after {content: ''; width: 12px;  height: 12px; border-top: 1px solid #121212; /* 선 두께 */    border-right: 1px solid #121212; /* 선 두께 */    display: inline-block;    transform: rotate(45deg); /* 각도 */    cursor: pointer;}
+.you_left span::after {content: ''; width: 12px;  height: 12px; border-top: 1px solid #121212; /* 선 두께 */    border-right: 1px solid #121212; /* 선 두께 */    display: inline-block;    transform: rotate(225deg); /* 각도 */    cursor: pointer;}
 /*유튜브 */
 
 .submit_form_table{position: relative; _width:530px;}
@@ -410,7 +319,6 @@ html ul.tabs li.active, html ul.tabs li.active a:hover  {
 
 .swiper_position_b{width: 1720px; overflow: hidden; margin-left:70px;}
 .top_110{top:110px !important;}
-
 .swiper_position_p{padding-top:30px;}
 .photo_border{border:1px solid #ebebeb; width: 278px !important; height: 333px !important; }
 .photo_border img{width: 100%; }
