--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,8 @@
 /* CSS Document */
 html,body{padding:0; margin:0;}
 .container{width:1850px;margin:0 auto; }
+.container_s{width:1100px;margin:0 auto; }
+
 
 /* Default Setting */
 html, body, div, input, label, select, textarea, button, h1, h2, h3, h4, h5, h6, strong, p, span, a, ul, li, dl, dt, dd, a, ::after, ::before { font-family: 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif; font-size: 14px; color: #000; font-weight: normal; letter-spacing: -1px;}
@@ -23,6 +25,25 @@ textarea {resize: none; outline: 0; vertical-align: top;}
 button {display: inline-block; font-family: inherit; text-decoration: none; background: transparent; border: none; outline: 0; white-space: nowrap; vertical-align: top; cursor: pointer;}
 .white-popup {position: relative; background: #FFF; padding: 20px; width: auto; max-width: 500px;margin: 20px auto; }
 .s1wiper-container {width: 600px; height: 300px;}
+
+
+@-webkit-keyframes zoom-a {
+	0% { background-size: 120% auto; }
+	100% { background-size: 105% auto; }
+}
+@-moz-keyframes zoom-a {
+	0% { background-size: 120% auto; }
+	100% { background-size: 105% auto; }
+}
+@-o-keyframes zoom-a {
+    0% { background-size: 120% auto; }
+	100% { background-size: 105% auto; }
+}
+@keyframes zoom-a {
+	0% { background-size: 120% auto; }
+	100% { background-size: 105% auto; }
+}
+
 
 #top_gnb *{margin:0;padding:0;list-style:none}
 #top_gnb img{border:0}
@@ -64,6 +85,8 @@ button {display: inline-block; font-family: inherit; text-decoration: none; back
 .selectbox:before {content: "";position: absolute;top: 50%;right: 15px;width: 0;height: 0;margin-top: -1px;border-left: 5px solid transparent;border-right: 5px solid transparent;border-top: 5px solid #9c9c9c;}
 .selectbox label {position: absolute;top: 1px;left: 5px;padding: 0 0px;color: #999;z-index: -1;}
 .selectbox select {width: 100%;height: auto;line-height: normal;font-family: inherit;padding: 0 10px;border: 0;opacity: 0;filter:alpha(opacity=0);-webkit-appearance: none;-moz-appearance: none;appearance: none;}
+
+.selectbox_s {position: relative;_width: 60px;_border: 1px solid #999;z-index: 1;}
 /* 셀렉트 박스 */
 
 /* 체크 박스 */
@@ -234,7 +257,7 @@ html ul.tabs li.active, html ul.tabs li.active a:hover  {color: #fff; cursor: po
 .index_bottom-container .swiper-slide {height: 640px;  line-height: 0px;}
 .index_bottom-container .swiper-slide{background:transparent !important;  text-align: left;  font-size: 18px;  background: #f000;   color:#fff;  vertical-align: top;  display: -webkit-box; display: -ms-flexbox;  display: -webkit-flex;  display: flex;  -webkit-box-pack: center; -ms-flex-pack: center;  -webkit-justify-content: center;  justify-content: center;  -webkit-box-align: center;  -ms-flex-align: center;  -webkit-align-items: center;  align-items: center;}
 
-#ab_navi{	position: absolute;	width: 140px;	right: 0;	top: 145px;  z-index: 99;}
+#ab_navi{	position: absolute;	width: 140px;	right: 0;	top: 135px;  z-index: 99;}
 #ab_navi .p_right_banner li{font-size:0;}
 
 #d_tab37{position:relative;height:810px; max-width:2000px; margin:0 auto; overflow:hidden}
@@ -258,7 +281,7 @@ html ul.tabs li.active, html ul.tabs li.active a:hover  {color: #fff; cursor: po
 #d_tab37 .d_btn li{display:inline-block;*display:inline;zoom:1;width:14px;height:14px;_background:url('images/main_btn_off.png') no-repeat;margin:0 3px;cursor:pointer}
 #d_tab37 .d_btn li.on{_background:url('images/main_btn_on.png') no-repeat}
 
-#ab_form{	position: absolute;	width: 309px;	right: 100px;	top: 610px;  z-index: 99;}
+#ab_form{	position: absolute;	width: 309px;	right: 100px;	top: 570px;  z-index: 99;}
 .obj_top{margin:0 auto; text-align:center; z-index:9;}
 .obj_bg{width:309px; height:309px; background:url('../images/obj_bg.png') no-repeat; margin-top:-30px}
 .scroll_input{width: 216px; height:33px; line-height: 33px; font-size:16px; color:#aaaaaa; padding-left:25px; margin-bottom:4px;}
@@ -347,3 +370,130 @@ html ul.tabs li.active, html ul.tabs li.active a:hover  {color: #fff; cursor: po
 .photo_border img{width: 100%; }
 .photo_border:hover{border:1px solid #ebebeb; width: 278px; height: 333px; box-shadow: 3px 3px 7px #efefef;}
 .photo_list_btn{text-align: center; margin:0 auto; padding-top:15px;}
+
+.sub_visual{position: relative; height: 305px;}
+.sub01{
+    background:url("../images/sub_visual1.png") no-repeat ;
+    background-size: cover;
+    background-position: center center;
+    -webkit-animation: zoom-a 20s linear  alternate; /* Safari 4+ */
+    -moz-animation:    zoom-a 20s linear  alternate; /* Fx 5+ */
+    -o-animation:      zoom-a 20s linear  alternate; /* Opera 12+ */
+    animation:         zoom-a 20s linear  alternate; /* IE 10+, Fx 29+ */
+}
+.center_nav{
+    width: 100%;
+    background:#fff;
+    border:1px solid #d7d7d7;
+}
+.select_area{ width: 290px;}
+.center_nav li{display: inline-block; border-right:1px solid #d7d7d7;   height:59px;}
+.center_nav li.home{width:79px; padding-top:14px; text-align:center; vertical-align: top;}
+.subvisual_txt1{text-align:center; font-size:50px; color:#fff; font-weight:600; padding-top:85px; }
+.subvisual_txt2{text-align:center; font-size:22px; color:#fff; font-weight:500; padding-top:30px;}
+.content_nav{
+    position: relative;
+    margin-top:-30px;
+}
+.sub_content{ 
+    position: relative;
+    margin-top:65px;
+    margin-bottom:140px;
+}
+  
+  .dropdown {
+    width: 100%;
+    margin: 0px;
+  }
+  
+  .dropdown dd,
+  .dropdown dt,
+  .dropdown ul {
+    margin: 0px;
+    padding: 0px;
+  }
+  
+  .dropdown dd {
+    position: relative;
+  }
+  
+  .dropdown a,
+  .dropdown a:visited {
+    color: #3b3b3b;
+    text-decoration: none;
+    outline: none;
+  }
+  
+  .dropdown a:hover {
+    color: #3b3b3b;
+  }
+  
+  .dropdown dt a:hover {
+    color: #3b3b3b;
+    border: 1px solid #fff;
+  }
+  
+  .dropdown dt a {
+    background: #fff url('../images/select_arrow.png') no-repeat scroll right 10px center;
+    display: block;
+    padding-right: 20px;
+    border: 1px solid #fff;
+    width: 100%;
+    height: 59px;
+  }
+  
+  .dropdown dt a span {
+    cursor: pointer;
+    display: block;
+    line-height: 59px;
+    padding-left: 10px;
+  }
+  
+  .dropdown dd ul {
+    background: #fff none repeat scroll 0 0;
+    border: 1px solid #9e9e9e;
+    color: #515151;
+    display: none;
+    left: 0px;
+    padding: 5px 0px;
+    position: absolute;
+    top: -1px;
+    width: 100%;
+    min-width: 102px;
+    list-style: none;
+    text-align: left;
+  }
+  .dropdown2 li{width: 100%;;}
+  
+  .dropdown2 a span {
+    cursor: pointer;
+    display: block;
+    line-height: 29px;
+    padding-left: 10px;
+  }
+  
+  .dropdown span.value {
+    display: none;
+  }
+  
+  .dropdown dd ul li a {
+    padding: 0 5px;
+    line-height: 59px;
+    display: block;
+    padding-left: 11px;
+  }
+  
+  .dropdown dd ul li a:hover {
+    background-color: #e8e8e8;
+  }
+  
+  .dropdown img.flag {
+    border: none;
+    vertical-align: middle;
+    padding: 11px;
+  }
+  
+  .flagvisibility {
+    display: none;
+  }
+  
